# Dj-Celery-RabbitMQ

./: pyproject.toml  readme.MD
core/: api.py  celery.py  settings.py  urls.py
stocks/: admin.py  models.py  stocks.http  stocks_api.py  tasks.py
stocks/migrations/: 0001_initial.py
